--- a/site/styles.css
+++ b/site/styles.css
@@ -84,7 +84,7 @@ h2{
 }
 
 .content{
-    height: 1000px;
+    height: 1250px;
     background-color: white
 }
 
@@ -102,26 +102,22 @@ h3{
 .areaIdeias{
     display: flex;
     justify-content: space-around;
-    border-bottom: #000000 solid 5px;
     margin: 0 auto;
     width: 1500px;
 }
 
 .areaSobreNos{
-    border-bottom: #000000 solid 5px;
     margin: 0 auto;
     width: 1500px;
 }
 
 .areaSaibaMais{
-    border-bottom: #000000 solid 5px;
     margin: 0 auto;
     width: 1500px;
 }
 
 .areaParceiros{
     display: block;
-    border-bottom: #000000 solid 5px;
     margin: 0 auto;
     width: 1500px;
 }
@@ -135,6 +131,7 @@ h3{
     /* background-color: #defabb; */
     height: 750px;
     width: 700px;
+
 }
 
 #consciente{
@@ -179,4 +176,15 @@ footer{
     justify-content: center;
     align-items: center;
     color: white;
+}
+
+.textoNos{
+   font-weight: bolder;
+   font-size: 35px;
+}
+
+#imgWeTech{
+    display: flex;
+    justify-content: center;
+    margin-top: -120px;
 }
